SERVER-13128 Fix nscannedObjects calculation for $or subtree explain